# kaggle-llm-science-exam

./: .gitignore  init.sh  pyproject.toml  requierements_for_cuda.txt  requirements.txt  upload_llm_se_python_wheel.sh
data/kaggle-llm-science-exam-with-context/: dataset-metadata.json
data/llm-se-add-context-nb/: dataset-metadata.json  llm-se-add-context-feature-from-openbook.ipynb
data/llm-se-datasets-with-context-v3/: dataset-metadata.json
data/llm-se-datasets-with-context-v4/: dataset-metadata.json
data/llm-se-extra-train-datasets/: dataset-metadata.json
data/llm-se-nb-for-ensemble/: dataset-metadata.json  llm-se-deberta-inference.ipynb  llm-se-llm-inference-layer-by-layer.ipynb
llm_science_exam/: pj_struct_paths.py  typing.py  utils.py
llm_science_exam/data/: __init__.py  config.py  dataset.py
llm_science_exam/deberta/: dataset.py  model.py
llm_science_exam/llama2/: __init__.py  dataset.py  layer_by_layer_predict.py  model.py  plot.py  predict.py  prompts.py
llm_science_exam/model/: checkpoint.py  model.py  train.py
llm_science_exam/model/deberta/: __init__.py  custom_forward_method.py  dataset.py  model.py  train.py
llm_science_exam/model/llama2/: __init__.py  dataset.py  layer_by_layer_predict.py  model.py  plot.py  predict.py  prompts.py  train.py
llm_science_exam/open_book/: __init__.py  _open_book.py  model.py  predict.py  search.py
llm_science_exam/open_book_v2/: __init__.py  sf_faiss.py  tf_idf.py  utils.py
llm_science_exam/score/: __init__.py  map_at_k.py  perplexity.py
meta/: monitor_submission_executing_time.py
src/deberta/: predict.py  train.py
src/deberta/config/: deberta-v3-large.toml
src/deberta/config/a100/: deberta-v3-large-ft.toml  deberta-v3-large-pretrain.toml  deberta-v3-large.toml
src/deberta/config/a100x2/: deberta-v3-large.toml
src/ensemble/: show_corr.py
src/llama2/: add_openbook_context_to_dataset.py  create_layer_by_layer_safetensors.py  generate.py  merge_and_create_layers.py  predict.py  predict_layer_by_layer.py  show_learning_curve.py  train.py
src/llama2/config/: llama2-with-context-20seq.toml  llama2-with-context-300w.toml  llama2-with-context-500w.toml  llama2.toml  openorca-platypus2.toml  platypus2.toml
src/llama2/config/a100/: llama2-16bits-best.toml  llama2-16bits.toml  llama2-32bits.toml  llama2-with-context-300w.toml  llama2-with-context-400w.toml
src/llama2/config/v100/: llama2.toml
src/openbook/: add_openbook_context_to_dataset.py  anl_context.py  cluster.py  fetch.py  find.py  find_wiki_stem_articles.py  limit_context_sentences.py  read_270k_stem_wiki.py
