[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-science-exam"
description = "Package of llm-science-exam"
readme = "README.md"
requires-python = ">= 3.10"
version = "0.0.1"
dynamic = ["dependencies"]

[project.optional-dependencies]
dash = [
    "dash[diskcache]~=2.12.1",
    "dash_bootstrap_components~=1.4.1",
    "dash_auth~=1.4.1"
]
train = [
    "trl==0.6.0"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
exclude = ["data", "build", "dist", "src", "meta"]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.mypy]
show_error_context = true
strict = true
show_column_numbers = true
namespace_packages = true
disallow_subclassing_any = false
disallow_untyped_decorators = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
follow_imports = "silent"
exclude = []
